[FEATURE] Starting to incorporate gap projection into mason_simulator.

--- a/apps/mason2/CMakeLists.txt
+++ b/apps/mason2/CMakeLists.txt
@@ -55,6 +55,7 @@ add_library (mason_sim
              external_split_merge.h
              external_split_merge.cpp
              fragment_generation.h
+             gap_projection.h
              genomic_variants.h
              genomic_variants.cpp
              individual_genome.h
